@@ -4,7 +4,7 @@ date.timezone setting [2]
 date.timezone=Europe/Oslo
 --FILE--
 <?php
-	putenv('TZ'); // clean TZ so that it doesn't bypass the ini option
+	putenv('TZ='); // clean TZ so that it doesn't bypass the ini option
 	echo strtotime("2005-06-18 22:15:44");
 ?>
 --EXPECT--
